--- a/src/app/modales/payloads-detallado/payloads-detallado.component.css
+++ b/src/app/modales/payloads-detallado/payloads-detallado.component.css
@@ -1,29 +1,41 @@
-.card{
-    background-color: rgb(71, 71, 71);
-    margin: 0;
-    padding-left: 10rem;
-    padding-right: 10rem;
-    text-align: center;
-    }
-    
-    .card img{
-        height: 400px;
-        border-radius: 20px;
-    }
-    
-    h2{
-        font-size: 3rem;
-        margin: 0;
-        padding: 3rem;
-    }
-    
-    p{
-        text-align: start;
-        padding-left: 15rem;
-        margin: 0;
-    }
-    
-    .texto p{
-        padding: 1rem;
-        padding-left: 12rem;
-    }
+.conteiner {
+  padding: 1rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  background-color: rgb(71, 71, 71);
+  height: 850px;
+}
+
+img {
+  height: 300px;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+}
+
+.titulo {
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-family: "Orbitron", sans-serif;
+}
+
+.titulo h2 {
+  margin: 0;
+  padding: 0;
+  margin: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.informacion{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+table{
+    width: 482.38px;
+}
