--- a/src/app/modales/payloads-detallado/payloads-detallado.component.html
+++ b/src/app/modales/payloads-detallado/payloads-detallado.component.html
@@ -1,11 +1,44 @@
-<div class="card" *ngFor="let payload of payloads">
-  <h2>{{ payload.name }}</h2>
-  <div class="texto">
-    <p>Tipo: {{ payload.type }}</p>
-    <p>Peso: {{ payload.mass_kg  }} kg</p>
-    <p>Clientes:</p>
-    <ul *ngFor=" let customer of payload.customers">
-        <p>{{customer}}</p>
-    </ul>
+<div class="conteiner">
+  <div class="titulo"><h2>Payloads</h2></div>
+  <div class="informacion">
+      <img src="../../../assets/img/payloads.jpg" alt="Payload general" />
+    <div>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Nombre</th>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="customers">
+          <th mat-header-cell *matHeaderCellDef>Cliente</th>
+          <td mat-cell *matCellDef="let element">{{ element.customers }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="type">
+          <th mat-header-cell *matHeaderCellDef>Tipo</th>
+          <td mat-cell *matCellDef="let element">{{ element.type }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="mass_kg">
+          <th mat-header-cell *matHeaderCellDef>Peso</th>
+          <td mat-cell *matCellDef="let element">{{ element.mass_kg }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="orbit">
+          <th mat-header-cell *matHeaderCellDef>Orbita</th>
+          <td mat-cell *matCellDef="let element">{{ element.orbit }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+
+      <mat-paginator
+        [pageSizeOptions]="[5]"
+        showFirstLastButtons
+        aria-label="Select page of periodic elements"
+      >
+      </mat-paginator>
+    </div>
   </div>
 </div>
